--- a/IntegratedPresenter/MainWindow.xaml
+++ b/IntegratedPresenter/MainWindow.xaml
@@ -1574,18 +1574,18 @@
                                                 </Grid>
                                                 <Grid Grid.Row="1">
                                                     <Grid.ColumnDefinitions>
-                                                        <ColumnDefinition></ColumnDefinition>
-                                                        <ColumnDefinition></ColumnDefinition>
+                                                        <ColumnDefinition Width="*"></ColumnDefinition>
+                                                        <ColumnDefinition Width="1.5*"></ColumnDefinition>
                                                     </Grid.ColumnDefinitions>
-                                                    <StackPanel Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,20,0">
-                                                        <TextBlock Foreground="Orange">T-</TextBlock>
-                                                        <TextBlock Name="TbMediaTimeRemaining" Foreground="Orange">0:00</TextBlock>
+                                                    <StackPanel Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Center">
+                                                        <TextBlock Foreground="{StaticResource redBrush}" FontSize="30">T-</TextBlock>
+                                                        <TextBlock Name="TbMediaTimeRemaining" Foreground="{StaticResource redBrush}" FontSize="30">0:00</TextBlock>
                                                     </StackPanel>
-                                                    <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Left" Margin="20,0,0,0">
-                                                        <TextBlock Foreground="Orange">T+</TextBlock>
-                                                        <TextBlock Name="TbMediaTimeCurrent" Foreground="Orange">0:00</TextBlock>
-                                                        <TextBlock Foreground="Orange">/</TextBlock>
-                                                        <TextBlock Name="TbMediaTimeDurration" Foreground="Orange">0:00</TextBlock>
+                                                    <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
+                                                        <TextBlock Foreground="{StaticResource greenBrush}" FontSize="30">T+</TextBlock>
+                                                        <TextBlock Name="TbMediaTimeCurrent" Foreground="{StaticResource greenBrush}" FontSize="30">0:00</TextBlock>
+                                                        <TextBlock Foreground="{StaticResource whiteBrush}" FontSize="30">/</TextBlock>
+                                                        <TextBlock Name="TbMediaTimeDurration" Foreground="{StaticResource tealBrush}" FontSize="30">0:00</TextBlock>
                                                     </StackPanel>
                                                 </Grid>
                                             </Grid>
