[FIX] Deprecation in Chrome 132+ of --headless=old Because more dependencies is always the solution! Use puppeteer to drive chrome-headless-shell when rendering html slides.

--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -151,9 +151,10 @@
                 <MenuItem Foreground="Black" Name="miRenderClean" Click="ClickRenderFromClean" IsCheckable="True" IsChecked="false" Header="Clean Pre-Render"></MenuItem>
                 <MenuItem Foreground="Black" Name="miExportLegacy" IsCheckable="True" IsChecked="false" Header="Legacy Export Mode"></MenuItem>
                 <Separator></Separator>
-                <MenuItem  Foreground="Black" Name="mirenderoptions_chrome" Click="ClickRenderOptions_Chrome" Header="Render with Chrome" IsCheckable="True" IsChecked="True"></MenuItem>
-                <MenuItem  Foreground="Black" Name="mirenderoptions_edge" Click="ClickRenderOptions_Edge" Header="Render with Edge" IsCheckable="True" IsChecked="False"></MenuItem>
-                <MenuItem  Foreground="Black" Name="mirenderoptions_firefox" Click="ClickRenderOptions_Firefox" Header="Render with Firefox" IsCheckable="True" IsChecked="False"></MenuItem>
+                <MenuItem  Foreground="Black" Name="mirenderoptions_puppet" Click="ClickRenderOptions_Puppet" Header="Render with Puppet" IsCheckable="True" IsChecked="True"></MenuItem>
+                <MenuItem  Foreground="Black" Name="mirenderoptions_chrome" Click="ClickRenderOptions_Chrome" Header="Render with Chrome (DEPRECATED)" IsCheckable="True" IsChecked="false"></MenuItem>
+                <MenuItem  Foreground="Black" Name="mirenderoptions_edge" Click="ClickRenderOptions_Edge" Header="Render with Edge (DEPRECATED)" IsCheckable="True" IsChecked="False"></MenuItem>
+                <MenuItem  Foreground="Black" Name="mirenderoptions_firefox" Click="ClickRenderOptions_Firefox" Header="Render with Firefox (UNSTABLE)" IsCheckable="True" IsChecked="False"></MenuItem>
             </MenuItem>
             <MenuItem Header="Import">
                 <MenuItem  Foreground="Black" Name="miimport" Click="ClickImportService" Header="Import from LSB Service">
