--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -185,7 +185,7 @@
             <MenuItem Header="Tools">
                 <MenuItem Foreground="Black" Click="Click_GenerateArbitraryReading_Complex" Header="Generate Arbitrary Reading (Complex)"></MenuItem>
                 <MenuItem Foreground="Black" Click="Click_BibleClassWizzard" Header="Bible Class Wizzard"></MenuItem>
-                <MenuItem Foreground="Black" Click="Click_DeepSix" Header="Funeral Wizard (Deep Siz)"></MenuItem>
+                <MenuItem Foreground="Black" Click="Click_DeepSix" Header="Funeral Wizard (Deep Six)"></MenuItem>
             </MenuItem>
             <MenuItem Header="Help">
                 <MenuItem  Foreground="Black" Header="Commands" Click="ClickHelpCommands">
