--- a/DeepSixGUI/DeepSixWizard.xaml
+++ b/DeepSixGUI/DeepSixWizard.xaml
@@ -278,7 +278,11 @@
                 </StackPanel>
                 <TextBox Name="tbReading4" Grid.Row="16" Grid.Column="1" Style="{StaticResource DarkTextbox}">ref.</TextBox>
 
-                <Button Grid.Row="17" Grid.ColumnSpan="2" Width="150" Height="30" Margin="10" Foreground="#efefef" Style="{StaticResource DarkBtn}" Click="Click_Create">CREATE</Button>
+                <StackPanel Grid.Row="17" Grid.ColumnSpan="2" Orientation="Horizontal">
+                    <Button Width="150" Height="30" Margin="10" Foreground="#efefef" Style="{StaticResource DarkBtn}" Click="Click_Load">LOAD</Button>
+
+                    <Button Width="150" Height="30" Margin="10" Foreground="#efefef" Style="{StaticResource DarkBtn}" Click="Click_Create">CREATE</Button>
+                </StackPanel>
             </Grid>
         </Viewbox>
     </Grid>
